--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -56,6 +56,19 @@
 			align-self: center;
 		}
 
+		.img-login {
+			width: 8rem;
+			margin-top: 48px;
+			border-radius: 8rem;
+		}
+
+		.user-login {
+			color: #6748c5;
+			font-size: 1.25rem;
+			margin-top: 16px;
+			text-transform: uppercase;
+		}
+
 		h2 {
 			font-size: 24px;
 			margin: 64px 0 24px;
