--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -9,6 +9,7 @@
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
+			flex-wrap: wrap;
 
 			> a > img {
 				max-height: 45px;
@@ -16,6 +17,8 @@
 
 			> div {
 				display: flex;
+				flex-wrap: wrap;
+				justify-content: space-between;
 				gap: 16px;
 
 				button {
